--- a/wdpk/syncthing/apkg.rc
+++ b/wdpk/syncthing/apkg.rc
@@ -1,6 +1,6 @@
 Package:	syncthing
-Version:	2.0.3
-Packager:	Matyt
+Version:	2.0.5
+Packager:	lojziczech
 Email:
 Homepage:	https://www.syncthing.net
 Description:	Open Source Continuous File Synchronization
